--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-# Core FastAPI dependencies
-fastapi>=0.109.0,<0.110.0
+nicegui>=1.4.15,<2.0.0
 uvicorn[standard]>=0.27.0,<0.28.0
 python-dotenv>=1.0.0,<2.0.0
 pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
-nicegui>=1.4.15,<2.0.0 # For NiceGUI UI framework
-
-# Optional, but often useful
-python-multipart>=0.0.9,<0.0.10 # For file uploads
-Jinja2>=3.1.0,<3.2.0 # For HTML templating (if needed)
+chardet>=5.2.0,<6.0.0
+sqlalchemy>=2.0.25,<3.0.0
+alembic>=1.13.1,<2.0.0
+plotly>=5.17.0,<6.0.0
+pandas>=2.1.4,<3.0.0
+numpy>=1.24.0,<2.0.0
+scikit-learn>=1.3.0,<2.0.0
+passlib[bcrypt]>=1.7.4,<2.0.0
+python-jose[cryptography]>=3.3.0,<4.0.0
+httpx>=0.25.2,<1.0.0
+psutil>=5.9.6,<6.0.0
+python-dateutil>=2.8.2,<3.0.0
