--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,31 @@
+# Core Framework
 nicegui>=1.4.15,<2.0.0
 uvicorn[standard]>=0.27.0,<0.28.0
+
+# Configuration & Environment
 python-dotenv>=1.0.0,<2.0.0
 pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
-chardet>=5.2.0,<6.0.0
+
+# Database & ORM
 sqlalchemy>=2.0.25,<3.0.0
+alembic>=1.13.1,<2.0.0
+
+# Authentication & Security
 passlib[bcrypt]>=1.7.4,<2.0.0
 python-jose[cryptography]>=3.3.0,<4.0.0
+
+# Machine Learning & Data Processing
 scikit-learn>=1.3.0,<2.0.0
 pandas>=2.1.4,<3.0.0
 numpy>=1.24.0,<2.0.0
 joblib>=1.3.0,<2.0.0
+
+# HTTP Client
+httpx>=0.25.2,<1.0.0
+
+# File Processing
+python-multipart>=0.0.6,<1.0.0
+
+# Utilities
+chardet>=5.2.0,<6.0.0
